gccida/g3/invalidate
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/invalidate/src/cse.c:2303:26: error: must use 'enum' tag to refer to type 'machine_mode'
void  invalidate( rtx x, machine_mode full_mode) 
                         ^
                         enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/invalidate/src/cse.c:2314:4: error: expected ';' after expression
rtx v12; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/invalidate/src/cse.c:2314:5: error: use of undeclared identifier 'v12'
rtx v12; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/invalidate/src/cse.c:2357:64: error: expected ')'
if ( cached_regno != ( _DWORD)rtuint || (  struct cse_reg_info = cached_cse_reg_info) == 0LL ) 
                                                               ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/invalidate/src/cse.c:2357:41: note: to match this '('
if ( cached_regno != ( _DWORD)rtuint || (  struct cse_reg_info = cached_cse_reg_info) == 0LL ) 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/invalidate/src/cse.c:2357:87: error: expected expression
if ( cached_regno != ( _DWORD)rtuint || (  struct cse_reg_info = cached_cse_reg_info) == 0LL ) 
                                                                                      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/invalidate/src/cse.c:2358:2: error: expected expression
 struct cse_reg_info = get_cse_reg_info( rtuint); 
 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/invalidate/src/cse.c:2363:25: error: use of undeclared identifier 'machine_mode'
v7 = canon_hash( rtx, ( machine_mode)*( ( unsigned __int8 *)rtx + 2)) & 0x1F; 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/invalidate/src/cse.c:2378:41: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v27 = ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + v23) - 5) < 2) + 1; 
                                        ^~~~~~~~~~~~
                                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/invalidate/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/invalidate/src/cse.c:2448:41: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v44 = ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + v41) - 5) < 2) + 1; 
                                        ^~~~~~~~~~~~
                                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/invalidate/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/invalidate/src/cse.c:2533:21: error: expected expression
invalidate( *( rtx *)&rtwint[2 * v18 + 2], VOIDmode); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/invalidate/src/cse.c:2556:1: error: use of undeclared identifier 'v12'
v12 = canon_rtx( rtx); 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/invalidate/src/cse.c:2557:7: error: use of undeclared identifier 'v12'
v13 = v12; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/invalidate/src/cse.c:2559:36: error: use of undeclared identifier 'v12'
full_mode = *( ( unsigned __int8 *)v12 + 2); 
                                   ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/invalidate/src/obj/cse.o] Error 1
